jupiter compliant 1.8 compliant